3251
Similar problem for manifests for structural types: 
```scala
scala> def f(implicit a: Manifest[{def g: Unit}]) = a
f: (implicit a: Manifest[AnyRef{def g: Unit}])Manifest[AnyRef{def g: Unit}]

scala> f
<console>:6: error: type mismatch;
 found   : scala.reflect.Manifest[AnyRef]
 required: Manifest[AnyRef{def g: Unit}]
       f
       ^
```
